src/main/java/com/example/demo/error/InvalidTokenException.java
package com.example.demo.error;

public class InvalidTokenException extends RuntimeException {
  public InvalidTokenException(String message) {
    super(message);
  }
}
